--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -865,6 +865,8 @@ nav ul li a:hover{
         color:orange;
     }
 
+
+
     #category{
         width: 100%;
         height:0%;
@@ -873,7 +875,7 @@ nav ul li a:hover{
         position: fixed;
         left:0;
         top:0;
-        color: white;
+        color: #cfbb63;
         font-family: 'Roboto', sans-serif;
         display: flex;
         flex-wrap: nowrap;
