--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
 <body>
@@ -128,24 +129,34 @@
 
     </div>
 
-    <div class ="bannerHead" id = "mainBanner">
+    <div class ="bannerHead" id = "mainBanner" data-aos="fade-in">
         <video src="{% static 'Raul/Images/Merch Video V 5.m4v' %}" autoplay loop muted id = "videoBG"></video>
-        <div class = "bannerHeading">
+        <div class = "bannerHeading" data-aos="fade-in">
             <figcaption><a href="#shop"><button> explore the shop </button></a></figcaption>
         </div>
     </div>
 
-    <div class= "feature" id="feature">
-        <div class="featureProducts">
+    <div class= "feature" id="feature" data-aos="fade-down"
+         data-aos-easing="linear"
+         data-aos-duration="1500">
+        <div class="featureProducts" data-aos="fade-down"
+             data-aos-easing="linear"
+             data-aos-duration="1500">
             <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo">
         </div>
-        <div class="featureProducts">
+        <div class="featureProducts" data-aos=data-aos="fade-down"
+             data-aos-easing="linear"
+             data-aos-duration="1500">
             <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo">
         </div>
-        <div class="featureProducts">
+        <div class="featureProducts" data-aos=data-aos="fade-down"
+             data-aos-easing="linear"
+             data-aos-duration="1500">
             <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo">
         </div>
-        <div class="featureProductsHeading">
+        <div class="featureProductsHeading" data-aos="fade-down"
+             data-aos-easing="linear"
+             data-aos-duration="1500">
             featured products
         </div>
     </div>
@@ -157,43 +168,43 @@
         <figcaption> shop for the perfect setup</figcaption>    
     </div>
 
-    <div class="horizontalScroll">
-        <div class ="container">
+    <div class="horizontalScroll" data-aos="fade-in">
+        <div class ="container" data-aos="fade-in">
             <button> shop by category </button>
             <button id="sideScroll"> > </button> 
             <span> scroll horizontally </span>
         </div>
-        <div class = "container">
+        <div class = "container" data-aos="fade-in">
             <img src="{% static 'Raul/Images/6.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
             <div class = "text">
                 <div class = "textInfo"> Furniture </div>
             </div>
         </div>
-        <div class = "container">
+        <div class = "container" data-aos="fade-in">
             <img src="{% static 'Raul/Images/8.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
             <div class = "text">
                 <div class = "textInfo"> Floral </div>
             </div>
         </div>
-        <div class = "container">
+        <div class = "container" data-aos="fade-in">
             <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
             <div class = "text">
                 <div class = "textInfo"> Lighting </div>
             </div>
         </div>
-        <div class = "container">
+        <div class = "container" data-aos="fade-in">
             <img src="{% static 'Raul/Images/11.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
             <div class = "text">
                 <div class = "textInfo"> Wall Art </div>
             </div>
         </div>
-        <div class = "container">
+        <div class = "container" data-aos="fade-in">
             <img src="{% static 'Raul/Images/10.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
             <div class = "text">
                 <div class = "textInfo"> Table Top </div>
             </div>
         </div>
-        <div class = "container">
+        <div class = "container" data-aos="fade-in">
             <img src="{% static 'Raul/Images/5.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
             <div class = "text">
                 <div class = "textInfo"> Decorative Accessories </div>
@@ -219,6 +230,11 @@
 
     <script src="{% static 'Raul/JS/script.js' %}" charset="UTF-8">
 
+    </script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 
 </body>
