--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -12,49 +12,101 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'Raul/Favicons/apple-icon-57x57.png' %}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{% static 'Raul/Favicons/apple-icon-60x60.png'%}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'Raul/Favicons/apple-icon-72x72.png'%}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'Raul/Favicons/apple-icon-76x76.png'%}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'Raul/Favicons/apple-icon-114x114.png'%}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'Raul/Favicons/apple-icon-120x120.png'%}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'Raul/Favicons/apple-icon-144x144.png'%}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'Raul/Favicons/apple-icon-152x152.png'%}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'Raul/Favicons/apple-icon-180x180.png'%}">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{% static 'Raul/Favicons/android-icon-192x192.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'Raul/Favicons/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'Raul/Favicons/favicon-96x96.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'Raul/Favicons/favicon-16x16.png'%}">
+    <link rel="manifest" href="{% static 'Raul/Favicons/manifest.json'%}">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{% static 'Raul/Favicons/ms-icon-144x144.png'%}">
+    <meta name="theme-color" content="#ffffff">
+
+    </head>
+
+
 
 <body>
 
 <!-- Header Nav Bar-->
 
-<div class = "headers" id="headerOnScroll">
+<div class = "headers" id="headerOnScroll" style="background-color: #333333;">
     <figure id="figureOnScroll">
 
-        <img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%"  onclick="openStore()" id="logo">
+        <div class="navbarIcons"> 
+            <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
+            <div class="hoverDiv2">
+                <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
+                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>email@email.com</span><br><br>
+                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (900)-009-9090</span>
+            </div>
+        </div>
+
+        <div class="navbarIcons"> 
+            <p><img src="{% static 'Raul/Icons/Icons_Small/location.png' %}" alt="Location"></p>
+            <div class="hoverDiv3">
+                <span style="letter-spacing: 2px;">VISIT US</span><br><br><br>
+                <span>216 8th Avenue, <br>New York, NY 10011</span><br><br>
+                <span>Seven Days a Week</span><br><br>
+                <span>9:00AM - 8:00PM</span>
+            </div>
+        </div>
+
+        <img src="{% static 'Raul/Images/raullogo.png' %}" alt="Raul Logo" width="6%"  onclick="openStore()" id="logo">
 
         {% if user.is_authenticated %}
-        <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}"> </p></a>
-        <a href="{% url 'logout' %}"> <p> Logout </p></a>
-        <a href="{% url 'cart' %}"> <p> <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}"> </p></a>
-        <a href="{% url 'profile' %}"> <p> <img src="{% static 'Raul/Icons/Icons_Small/login.png' %}"> </p></a>
+        <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
+        <div class="navbarIcons"> 
+            <p><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></p>
+            <div class="hoverDiv">
+                <span><a href="{% url 'profile' %}">Profile</a></span><br><br>
+                <span><a href="{% url 'logout' %}"> <p> Logout </p></a></span>
+            </div>
+        </div>
+        <a href="{% url 'cart' %}"> <p> <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Shopping Cart"> </p></a>
 
         {% else %}
-        <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}"> </p></a>
-        <a href="{% url 'login' %}"> <p><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}"> </p></a>
-        <a href="{% url 'cart' %}"> <p><img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}"> </p></a>
+        <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
+        <div class="navbarIcons"> 
+            <p><img src="{% static 'Raul/Icons/Icons_Small/login.png' %}" alt="Login"></p>
+            <div class="hoverDiv">
+                <span><a href="{% url 'login' %}">Login</a></span><br><br>
+                <span><a href="{% url 'register' %}">Register</a></span>
+            </div>
+        </div>
+        <a href="{% url 'cart' %}"> <p><img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"> </p></a>
         {% endif %}
 
     </figure>
 
-    <div class="category" id="hideOnScroll">
+    <div class="category" id="hideOnScroll" style="background-color: #333333;">
 
-        <p> New Arrivals </p>
+        <p id="categoryP" style="color:white;"> New Arrivals </p>
 
-        <p> Decorative Accessories</p>
+        <p id="categoryP" style="color:white;"> Decorative Accessories</p>
         
-        <p>Tabletop</p>
+        <p id="categoryP" style="color:white;">Tabletop</p>
         
-        <p>Furniture</p>
+        <p id="categoryP" style="color:white;">Furniture</p>
 
-        <p>Floral</p>
+        <p id="categoryP" style="color:white;">Floral</p>
         
-        <p>Wall Art</p>
+        <p id="categoryP" style="color:white;">Wall Art</p>
 
-        <p>All Products</p>
+        <p id="categoryP" style="color:white;">All Products</p>
         
-        <p>Sale</p>
+        <p id="categoryP" style="color:white;">Sale</p>
         
-        <p>Venue Bookings</p>
+        <p id="categoryPstyle="color:white;"">Venue Bookings</p>
 
     </div>
 
@@ -84,10 +136,28 @@
             </li>
 
 
-
         </ul>
     </nav>
-    
+
+</div>
+
+<div id ="store">
+    <p onclick="closeStore()" id="cross">
+        X
+    </p>
+
+    <p>
+        cafe flor
+    </p>
+
+    <p>
+        raul
+    </p>
+
+    <p>
+        third
+    </p>
+
 </div>
 
 
