--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -1,3 +1,6 @@
+{% extends "Raul/base.html" %}
+{% block content %}
+
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -56,3 +59,4 @@
 </body>
 
 </html>
+{% endblock %}
