--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -1,19 +1,24 @@
+
+
+{% extends "Raul/base.html" %}
 {% load static %}
+{% block content %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Bootstrap Product Grid</title>
     <!-- Bootstrap css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></head>
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></head>-->
 
-<!-- Style css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'Raul/style.css' %}">
+<!--&lt;!&ndash; Style css &ndash;&gt;-->
+<!--    <link rel="stylesheet" type="text/css" href="{% static 'Raul/style.css' %}">-->
 </head>
 
 <body>
 
 <div class="container">
-    <h1 class="text-center">RAUL</h1>
+
     <hr>
 
     <div class="row">
@@ -56,3 +61,4 @@
 </body>
 
 </html>
+{% endblock %}
